CB-24129 Cloud module: Create AWS KMS key
* EncryptionResources (cloud-api):
  * Add new operation createEncryptionKey(). Currently only implemented
    by AwsEncryptionResources. While #1106 used to have an integration
    for creating an encryption key for environments, that PR is now
    defunct. Actual integration will be added later as part of
    https://jira.cloudera.com/browse/CB-25162 (freeipa) and
    https://jira.cloudera.com/browse/CB-25163 (core).
  * Add default implementation for all the methods, throwing an
    UnsupportedOperationException.
* Extract some common KMS-related functionality into the new class
  AmazonKmsUtil (cloud-aws-common). Currently used from
  AwsEncryptionResources and AwsPlatformResources.
* AwsEncryptionResources (cloud-aws-common):
  * Implements EncryptionResources.createEncryptionKey() for creating
    keys in AWS KMS.
  * Since KMS keys do not have a name (only a UUID resource ID), keys
    are explicitly tagged with the custom tag Cloudera-KMS-Key-Target,
    whose value is set to EncryptionKeyCreationRequest.keyName.
    If already exists in EncryptionKeyCreationRequest.tags,
    Cloudera-KMS-Key-Target will be silently overwritten (and logged as
    a warning).
  * The key policy of the new KMS key is also initialized as follows:

{"Version":"2012-10-17","Id":"Policy generated by CDP","Statement":[{"Sid":"Enable IAM user permissions","Effect":"Allow","Principal":{"AWS":"arn:aws-us-gov:iam::123456789012:root"},"Action":"kms:*","Resource":"*"},{"Sid":"Allow access for the CDP credential IAM role as a key administrator","Effect":"Allow","Principal":{"AWS":"arn:aws-us-gov:iam::123456789012:role/my-credential-role"},"Action":["kms:GetKeyPolicy","kms:PutKeyPolicy"],"Resource":"*"},{"Sid":"Allow use of the key by CDP clusters","Effect":"Allow","Principal":{"AWS":"arn:aws-us-gov:iam::123456789012:role/my-role"},"Action":["kms:Decrypt","kms:Encrypt","kms:GenerateDataKey"],"Resource":"*"}]}

* .
  * arn:aws-us-gov:iam::1234567890