@@ -2,7 +2,9 @@ package com.sequenceiq.cloudbreak.cloud.aws.common.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -20,12 +22,17 @@ import java.util.TreeSet;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.sequenceiq.cloudbreak.cloud.aws.common.client.AmazonIdentityManagementClient;
+import com.sequenceiq.cloudbreak.cloud.exception.CloudConnectorException;
 import com.sequenceiq.cloudbreak.validation.ValidationResult;
 import com.sequenceiq.cloudbreak.validation.ValidationResult.ValidationResultBuilder;
 import com.sequenceiq.common.model.CloudIdentityType;
@@ -51,11 +58,23 @@ import software.amazon.awssdk.services.iam.model.SimulatePrincipalPolicyResponse
 
 @ExtendWith(MockitoExtension.class)
 public class AwsIamServiceTest {
+    private static final String ARN_INSTANCE_PROFILE = "arn:aws-us-gov:iam::123456789012:instance-profile/my-profile";
+
+    private static final String ARN_ROLE = "arn:aws-us-gov:iam::123456789012:role/my-role";
+
+    private static final String ARN_USER = "arn:aws-us-gov:iam::123456789012:user/my-user";
+
     @Mock
     private AmazonIdentityManagementClient iam;
 
     @InjectMocks
     private AwsIamService awsIamService;
+
+    @Captor
+    private ArgumentCaptor<GetInstanceProfileRequest> getInstanceProfileRequestCaptor;
+
+    @Captor
+    private ArgumentCaptor<GetRoleRequest> getRoleRequestCaptor;
 
     @Test
     public void invalidInstanceProfileArn() {
@@ -68,8 +87,10 @@ public class AwsIamServiceTest {
     public void missingInstanceProfile() {
         when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenThrow(NoSuchEntityException.class);
 
-        String instanceProfileArn = "account/missingInstanceProfile";
+        String instanceProfileName = "missingInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         InstanceProfile instanceProfile = awsIamService.getInstanceProfile(iam, instanceProfileArn, CloudIdentityType.ID_BROKER,
                 validationRequestBuilder);
 
@@ -80,14 +101,19 @@ public class AwsIamServiceTest {
                 Collections.singletonList(String.format("Instance profile (%s) doesn't exists on AWS side. " +
                                 "Please check if you've used the correct Instance profile when setting up Data Access.",
                         instanceProfileArn)));
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
     }
 
     @Test
     public void instanceProfileServiceFailureException() {
         when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenThrow(ServiceFailureException.class);
 
-        String instanceProfileArn = "account/potentialInstanceProfile";
+        String instanceProfileName = "potentialInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         InstanceProfile instanceProfile = awsIamService.getInstanceProfile(iam, instanceProfileArn, CloudIdentityType.ID_BROKER,
                 validationRequestBuilder);
 
@@ -98,22 +124,84 @@ public class AwsIamServiceTest {
                 Collections.singletonList(String.format("Instance profile (%s) doesn't exists on AWS side. " +
                                 "Please check if you've used the correct Instance profile when setting up Data Access.",
                         instanceProfileArn)));
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
     }
 
     @Test
     public void validInstanceProfile() {
-        String instanceProfileArn = "account/validInstanceProfile";
+        String instanceProfileName = "validInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
 
         InstanceProfile expectedInstanceProfile = InstanceProfile.builder().arn(instanceProfileArn).build();
         GetInstanceProfileResponse getInstanceProfileResult = GetInstanceProfileResponse.builder().instanceProfile(expectedInstanceProfile).build();
         when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenReturn(getInstanceProfileResult);
 
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         InstanceProfile instanceProfile = awsIamService.getInstanceProfile(iam, instanceProfileArn, CloudIdentityType.ID_BROKER,
                 validationRequestBuilder);
 
         assertThat(instanceProfile.arn()).isEqualTo(instanceProfileArn);
         assertThat(validationRequestBuilder.build().hasError()).isFalse();
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
+    }
+
+    @Test
+    public void invalidInstanceProfileArnNoValidationResult() {
+        assertThat(awsIamService.getInstanceProfileNoValidationResult(iam, null)).isNull();
+        assertThat(awsIamService.getInstanceProfileNoValidationResult(iam, "")).isNull();
+        assertThat(awsIamService.getInstanceProfileNoValidationResult(iam, "abc")).isNull();
+    }
+
+    @Test
+    public void missingInstanceProfileNoValidationResult() {
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenThrow(NoSuchEntityException.class);
+
+        String instanceProfileName = "missingInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
+
+        InstanceProfile instanceProfile = awsIamService.getInstanceProfileNoValidationResult(iam, instanceProfileArn);
+
+        assertThat(instanceProfile).isNull();
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
+    }
+
+    @Test
+    public void instanceProfileServiceFailureExceptionNoValidationResult() {
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenThrow(ServiceFailureException.class);
+
+        String instanceProfileName = "potentialInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
+
+        InstanceProfile instanceProfile = awsIamService.getInstanceProfileNoValidationResult(iam, instanceProfileArn);
+
+        assertThat(instanceProfile).isNull();
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
+    }
+
+    @Test
+    public void validInstanceProfileNoValidationResult() {
+        String instanceProfileName = "validInstanceProfile";
+        String instanceProfileArn = "account/" + instanceProfileName;
+
+        InstanceProfile expectedInstanceProfile = InstanceProfile.builder().arn(instanceProfileArn).build();
+        GetInstanceProfileResponse getInstanceProfileResult = GetInstanceProfileResponse.builder().instanceProfile(expectedInstanceProfile).build();
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenReturn(getInstanceProfileResult);
+
+        InstanceProfile instanceProfile = awsIamService.getInstanceProfileNoValidationResult(iam, instanceProfileArn);
+
+        assertThat(instanceProfile.arn()).isEqualTo(instanceProfileArn);
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo(instanceProfileName);
     }
 
     @Test
@@ -127,8 +215,10 @@ public class AwsIamServiceTest {
     public void missingRole() {
         when(iam.getRole(any(GetRoleRequest.class))).thenThrow(NoSuchEntityException.class);
 
-        String roleArn = "account/missingRole";
+        String roleName = "missingRole";
+        String roleArn = "account/" + roleName;
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         Role role = awsIamService.getRole(iam, roleArn, validationRequestBuilder);
 
         assertThat(role).isNull();
@@ -137,14 +227,19 @@ public class AwsIamServiceTest {
         assertThat(validationResult.getErrors()).isEqualTo(
                 Collections.singletonList(String.format("Role (%s) doesn't exists on AWS side. " +
                         "Please check if you've used the correct Role when setting up Data Access.", roleArn)));
+
+        verify(iam).getRole(getRoleRequestCaptor.capture());
+        assertThat(getRoleRequestCaptor.getValue().roleName()).isEqualTo(roleName);
     }
 
     @Test
     public void roleServiceFailureException() {
         when(iam.getRole(any(GetRoleRequest.class))).thenThrow(ServiceFailureException.class);
 
-        String roleArn = "account/potentialRole";
+        String roleName = "potentialRole";
+        String roleArn = "account/" + roleName;
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         Role role = awsIamService.getRole(iam, roleArn, validationRequestBuilder);
 
         assertThat(role).isNull();
@@ -153,21 +248,29 @@ public class AwsIamServiceTest {
         assertThat(validationResult.getErrors()).isEqualTo(
                 Collections.singletonList(String.format("Role (%s) doesn't exists on AWS side. " +
                         "Please check if you've used the correct Role when setting up Data Access.", roleArn)));
+
+        verify(iam).getRole(getRoleRequestCaptor.capture());
+        assertThat(getRoleRequestCaptor.getValue().roleName()).isEqualTo(roleName);
     }
 
     @Test
     public void validRole() {
-        String roleArn = "account/validRole";
+        String roleName = "validRole";
+        String roleArn = "account/" + roleName;
 
         Role expectedRole = Role.builder().arn(roleArn).build();
         GetRoleResponse getRoleResult = GetRoleResponse.builder().role(expectedRole).build();
         when(iam.getRole(any(GetRoleRequest.class))).thenReturn(getRoleResult);
 
         ValidationResultBuilder validationRequestBuilder = new ValidationResultBuilder();
+
         Role role = awsIamService.getRole(iam, roleArn, validationRequestBuilder);
 
         assertThat(role.arn()).isEqualTo(roleArn);
         assertThat(validationRequestBuilder.build().hasError()).isFalse();
+
+        verify(iam).getRole(getRoleRequestCaptor.capture());
+        assertThat(getRoleRequestCaptor.getValue().roleName()).isEqualTo(roleName);
     }
 
     @Test
@@ -275,9 +378,9 @@ public class AwsIamServiceTest {
 
         SortedSet<String> expectedSingleResource = new TreeSet<>();
         expectedSingleResource.add("resource1");
-        Statement statementSingleResouce = new Statement(Effect.Allow)
+        Statement statementSingleResource = new Statement(Effect.Allow)
                 .withResources(new Resource("resource1"));
-        assertThat(awsIamService.getStatementResources(statementSingleResouce))
+        assertThat(awsIamService.getStatementResources(statementSingleResource))
                 .isEqualTo(expectedSingleResource);
 
         SortedSet<String> expectedMultipleResources = new TreeSet<>();
@@ -350,7 +453,7 @@ public class AwsIamServiceTest {
         Policy policy = new Policy().withStatements(createStatement(Set.of(new Action("s3:GetObject")), Set.of(new Resource("resource1"))));
         List<EvaluationResult> evaluationResults = awsIamService.validateRolePolicies(iam, createRole(), Set.of(policy));
         assertThat(evaluationResults).hasSize(1);
-        EvaluationResult evaluationResult = evaluationResults.get(0);
+        EvaluationResult evaluationResult = evaluationResults.getFirst();
         assertEquals("explicitDeny", evaluationResult.evalDecision().toString());
         verify(iam, times(1)).simulatePrincipalPolicy(any());
     }
@@ -364,5 +467,127 @@ public class AwsIamServiceTest {
 
     private Role createRole() {
         return Role.builder().arn("roleArn").build();
+    }
+
+    @Test
+    void getAccountRootArnTest() {
+        assertThat(awsIamService.getAccountRootArn(ARN_ROLE)).isEqualTo("arn:aws-us-gov:iam::123456789012:root");
+    }
+
+    static Object[][] isInstanceProfileArnTestDataProvider() {
+        return new Object[][]{
+                // iamResourceArn, responseExpected
+                {ARN_ROLE, false},
+                {ARN_USER, false},
+                {ARN_INSTANCE_PROFILE, true},
+        };
+    }
+
+    @ParameterizedTest(name = "iamResourceArn={0}")
+    @MethodSource("isInstanceProfileArnTestDataProvider")
+    void isInstanceProfileArnTest(String iamResourceArn, boolean responseExpected) {
+        assertThat(awsIamService.isInstanceProfileArn(iamResourceArn)).isEqualTo(responseExpected);
+    }
+
+    @Test
+    void getInstanceProfileRoleArnTestWhenHasRole() {
+        InstanceProfile instanceProfile = InstanceProfile.builder()
+                .roles(Role.builder()
+                        .arn(ARN_ROLE)
+                        .build())
+                .build();
+
+        assertThat(awsIamService.getInstanceProfileRoleArn(instanceProfile)).isEqualTo(ARN_ROLE);
+    }
+
+    @Test
+    void getInstanceProfileRoleArnTestWhenNoRole() {
+        InstanceProfile instanceProfile = InstanceProfile.builder()
+                .arn(ARN_INSTANCE_PROFILE)
+                .build();
+
+        CloudConnectorException cloudConnectorException = assertThrows(CloudConnectorException.class,
+                () -> awsIamService.getInstanceProfileRoleArn(instanceProfile));
+
+        assertThat(cloudConnectorException.getMessage()).isEqualTo(
+                String.format("No IAM role is associated with EC2 Instance Profile of ARN='%s'", ARN_INSTANCE_PROFILE));
+    }
+
+    @Test
+    void getEffectivePrincipalTestWhenInstanceProfileAndSuccess() {
+        InstanceProfile instanceProfile = InstanceProfile.builder()
+                .arn(ARN_INSTANCE_PROFILE)
+                .roles(Role.builder()
+                        .arn(ARN_ROLE)
+                        .build())
+                .build();
+        GetInstanceProfileResponse getInstanceProfileResponse = GetInstanceProfileResponse.builder()
+                .instanceProfile(instanceProfile)
+                .build();
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenReturn(getInstanceProfileResponse);
+
+        assertThat(awsIamService.getEffectivePrincipal(iam, ARN_INSTANCE_PROFILE)).isEqualTo(ARN_ROLE);
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo("my-profile");
+    }
+
+    @Test
+    void getEffectivePrincipalTestWhenInstanceProfileAndNoSuchEntityException() {
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenThrow(NoSuchEntityException.class);
+
+        CloudConnectorException cloudConnectorException = assertThrows(CloudConnectorException.class,
+                () -> awsIamService.getEffectivePrincipal(iam, ARN_INSTANCE_PROFILE));
+
+        assertThat(cloudConnectorException.getMessage()).isEqualTo(String.format("Unable to look up EC2 Instance Profile of ARN='%s'", ARN_INSTANCE_PROFILE));
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo("my-profile");
+    }
+
+    @Test
+    void getEffectivePrincipalTestWhenInstanceProfileAndNoRole() {
+        InstanceProfile instanceProfile = InstanceProfile.builder()
+                .arn(ARN_INSTANCE_PROFILE)
+                .build();
+        GetInstanceProfileResponse getInstanceProfileResponse = GetInstanceProfileResponse.builder()
+                .instanceProfile(instanceProfile)
+                .build();
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenReturn(getInstanceProfileResponse);
+
+        CloudConnectorException cloudConnectorException = assertThrows(CloudConnectorException.class,
+                () -> awsIamService.getEffectivePrincipal(iam, ARN_INSTANCE_PROFILE));
+
+        assertThat(cloudConnectorException.getMessage()).isEqualTo(
+                String.format("No IAM role is associated with EC2 Instance Profile of ARN='%s'", ARN_INSTANCE_PROFILE));
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo("my-profile");
+    }
+
+    @ParameterizedTest(name = "{0}")
+    @ValueSource(strings = {ARN_ROLE, ARN_USER})
+    void getEffectivePrincipalTestWhenNotInstanceProfile(String iamPrincipalArn) {
+        assertThat(awsIamService.getEffectivePrincipal(iam, iamPrincipalArn)).isEqualTo(iamPrincipalArn);
+
+        verify(iam, never()).getInstanceProfile(any(GetInstanceProfileRequest.class));
+    }
+
+    @Test
+    void getEffectivePrincipalsTest() {
+        InstanceProfile instanceProfile = InstanceProfile.builder()
+                .arn(ARN_INSTANCE_PROFILE)
+                .roles(Role.builder()
+                        .arn(ARN_ROLE)
+                        .build())
+                .build();
+        GetInstanceProfileResponse getInstanceProfileResponse = GetInstanceProfileResponse.builder()
+                .instanceProfile(instanceProfile)
+                .build();
+        when(iam.getInstanceProfile(any(GetInstanceProfileRequest.class))).thenReturn(getInstanceProfileResponse);
+
+        assertThat(awsIamService.getEffectivePrincipals(iam, List.of(ARN_ROLE, ARN_INSTANCE_PROFILE, ARN_USER))).isEqualTo(
+                List.of(ARN_ROLE, ARN_ROLE, ARN_USER));
+
+        verify(iam).getInstanceProfile(getInstanceProfileRequestCaptor.capture());
+        assertThat(getInstanceProfileRequestCaptor.getValue().instanceProfileName()).isEqualTo("my-profile");
     }
 }
